# imdb-reviews-classification

./: .gitignore  .python-version  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/: embedder.py  model.py  run.py
